<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@color/black"
            android:layout_marginLeft="@dimen/dp_70"
            android:src="@drawable/img"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/cross"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="0.1"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/black"
            android:src="@drawable/multiply"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_weight="0.1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/service_menu"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_30"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:onClick="service"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gift"
            android:onClick="gift"
            android:textStyle="normal"
            android:background="@color/black"
            android:textColor="@color/white2"
            android:textSize="@dimen/dp_30"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/promotion"
            android:background="@color/black"
            android:textStyle="normal"
            android:onClick="promotion"
            android:textColor="@color/white2"
            android:textSize="@dimen/dp_30"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:background="@color/black"
            android:textStyle="normal"
            android:onClick="location"
            android:textColor="@color/white2"
            android:textSize="@dimen/dp_30"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/feedback"
            android:textStyle="normal"
            android:onClick="feedback"
            android:background="@color/black"
            android:textColor="@color/white2"
            android:textSize="@dimen/dp_30"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_us"
            android:background="@color/black"
            android:textStyle="normal"
            android:onClick="contactus"
            android:textColor="@color/white2"
            android:textSize="@dimen/dp_30"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="horizontal">
       <ImageView
           android:layout_width="0dp"
           android:layout_height="25dp"
           android:layout_weight="0.25"
           android:src="@drawable/facebook"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:src="@drawable/instagram"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:src="@drawable/twitter"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:src="@drawable/google_plus"/>
    </LinearLayout>
</LinearLayout>