<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/image_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:id="@+id/sv1"
        android:layout_marginBottom="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="1dp"
        android:background="@drawable/trans_white_rectangle"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10">


        <ImageView
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:src="@drawable/nstyle_logo"/>

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:contextClickable="true"
            android:layout_marginTop="@dimen/dp_1"
            app:srcCompat="@mipmap/ic_launcher_round"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dob"
            android:textColor="@color/black"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/dp_20"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/input_dob"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#fff"
            android:layout_marginTop="@dimen/dp_20"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:fontFamily="@font/fonts_gotham"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/nationality"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/dp_20"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/input_natinality"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#fff"
            android:layout_marginTop="@dimen/dp_20"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:fontFamily="@font/fonts_gotham"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/pass"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/dp_20"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#fff"
            android:layout_marginTop="@dimen/dp_20"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:fontFamily="@font/fonts_gotham"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/veryfy_password"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/dp_20"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/input_verify_password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#fff"
            android:layout_marginTop="@dimen/dp_20"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:fontFamily="@font/fonts_gotham"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/black"
            android:elevation="4dp"
            android:padding="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>
    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/forgot_password"
        style="@android:style/TextAppearance.DeviceDefault"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/allready_login"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:fontFamily="@font/fonts_gotham" />
</RelativeLayout>