<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/trans_white_rectangle2"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/textdata"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/textdata2"
            android:textColor="@color/black1"
            android:textSize="@dimen/sp_12"
            android:textStyle="normal"
            android:fontFamily="@font/fonts_gotham"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:onClick="login"
                android:fontFamily="@font/fonts_gotham"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/black"
                android:text="@string/signup"
                android:onClick="signup"
                android:textColor="@color/white"
                android:fontFamily="@font/fonts_gotham"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/ll1"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_weight="0.7"
        android:background="@drawable/trans_white_rectangle2"
        android:fontFamily="@font/fonts_gotham"
        android:orientation="vertical"
        android:paddingTop="1dp"
        android:textAllCaps="false">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/white"
            android:fontFamily="@font/fonts_gotham"
            android:text="@string/menu"
            android:textAllCaps="false"
            android:textColor="@color/black1"
            android:textSize="@dimen/dp_30"
            android:textStyle="normal" />

        <ScrollView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_weight="0.3"
                    android:src="@drawable/hairicon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:fontFamily="@font/fonts_gotham"
                    android:gravity="center"
                    android:text="hair"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dp_30"
                    android:textStyle="normal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.1"
    android:layout_below="@+id/ll2"
    android:background="#EEEEEE"
    android:orientation="horizontal">
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="home"
        android:layout_weight="0.25"
        android:textColor="@color/white"
        android:background="@drawable/home" />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:onClick="call"
        android:textColor="@color/white"
        android:background="@mipmap/call" />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:onClick="booknow"
        android:textColor="@color/white"
        android:background="@mipmap/booknow"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:onClick="navigation"
        android:background="@mipmap/humberg"/>


</LinearLayout>


</LinearLayout>